--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -109,26 +109,42 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
-                                            <div class="form-group">
-                                                <label for="Field">حوزه تخصصی</label>
-                                                {% if form.special_field.errors %}
-                                                    {{ expert_info_form.special_field|attr:"id:Field"|attr:"class:error w-50" }}
-                                                {% else %}
-                                                    {{ expert_info_form.special_field|attr:"id:Field"|attr:"class:w-100" }}
-                                                {% endif %}
-                                                <div class="error">
-                                                    <span class="error-body">{{ form.special_field.errors }}</span>
+                                            <div class="form-group form-group-auto-check">
+                                                <label for="userID">شناسه کاربری</label>
+                                                <input type="text" class="w-100" id="userID">
+                                                <div class="form-group__status">
+                                                    <div class="success-status">
+                                                        <i class="fas fa-check"></i>
+                                                    </div>
+                                                    <div class="spinner-border text-secondary" role="status">
+                                                        <span class="sr-only">Loading...</span>
+                                                    </div>
+                                                    <div class="fail-status">
+                                                        <i class="fas fa-times"></i>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-
+                                        <div class="col-lg-12">
+                                            <div class="form-group">
+                                                <label for="MelliCode">کد ملی</label>
+                                                {{ expert_info_form.national_code|attr:"id:MelliCode"|attr:"readonly:True"|attr:"class:w-100" }}
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            <label for="MelliCode">کد ملی</label>
-                                            {{ expert_info_form.national_code|attr:"id:MelliCode"|attr:"readonly:True"|attr:"class:w-100" }}
+                                            <label for="Field">حوزه تخصصی</label>
+                                            {% if form.special_field.errors %}
+                                                {{ expert_info_form.special_field|attr:"id:Field"|attr:"class:error w-50" }}
+                                            {% else %}
+                                                {{ expert_info_form.special_field|attr:"id:Field"|attr:"class:w-100" }}
+                                            {% endif %}
+                                            <div class="error">
+                                                <span class="error-body">{{ form.special_field.errors }}</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -164,14 +180,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 autoAddProjectDiv">
-                                        <div class="form-group">
-                                            <div class="text-right">
-                                                <span class="sub-header" style="top: 10px;position: relative;">اضافه شدن خودکار به پروژه</span>
-                                            </div>
-                                            <input type="checkbox" id="autoAddProject" name="autoAddProject" class="w-100" value=1 {% if autoAddProject %}checked{% endif %}>
-                                        </div>
-                                    </div>
+
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-12">
@@ -220,7 +229,8 @@
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <label for="Email">پست الکترونیکی</label>
-                                            <input type="email" class="w-100" id="Email" value={{request.user.expertuser}} readonly=true>
+                                            <input type="email" class="w-100" id="Email"
+                                                   value={{ request.user.expertuser }} readonly=true>
                                         </div>
                                     </div>
                                 </div>
@@ -229,9 +239,10 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-group form-check">
-                                    <input type="checkbox" class="form-check-input inp-cbx" id="accessCheck"
-                                           name="access_check" hidden>
-                                    <label class="form-check-label cbx" for="accessCheck">
+                                    <input type="checkbox" class="form-check-input inp-cbx" id="autoAddProject"
+                                           name="autoAddProject" value=1 hidden
+                                           {% if autoAddProject %}checked{% endif %}>
+                                    <label class="form-check-label cbx" for="autoAddProject">
                                         <span>
                                             <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
                                                  xmlns="http://www.w3.org/2000/svg">
@@ -632,23 +643,23 @@
                                                         <input type="file" class="form-control-file"
                                                                id="uploadResume" name="resume" hidden>
                                                     </div>
-{#                                                    <div class="attach-box m-auto">#}
-{#                                                        <span class="attach-box__img pdf"></span>#}
-{#                                                        <span class="attach-box__info">#}
-{#                                                            <span class="attach-box__info-name">#}
-{#                                                                Capture#}
-{#                                                            </span>#}
-{#                                                            <span class="attach-box__info-ext">#}
-{#                                                                PNG#}
-{#                                                            </span>#}
-{#                                                        </span>#}
-{#                                                        <span class="attach-box__option">#}
-{#                                                           <a class="attach-box__option-download" href="#">#}
-{#                                                               <i class="fas fa-download"></i>#}
-{#                                                           </a>#}
-{#                                                        </span>#}
-{#                                                    </div>#}
-{#                                                    <button class="btn btn-primary mt-4" type="button" id="changeAttachment">تغییر فایل</button>#}
+                                                    {#                                                    <div class="attach-box m-auto">#}
+                                                    {#                                                        <span class="attach-box__img pdf"></span>#}
+                                                    {#                                                        <span class="attach-box__info">#}
+                                                    {#                                                            <span class="attach-box__info-name">#}
+                                                    {#                                                                Capture#}
+                                                    {#                                                            </span>#}
+                                                    {#                                                            <span class="attach-box__info-ext">#}
+                                                    {#                                                                PNG#}
+                                                    {#                                                            </span>#}
+                                                    {#                                                        </span>#}
+                                                    {#                                                        <span class="attach-box__option">#}
+                                                    {#                                                           <a class="attach-box__option-download" href="#">#}
+                                                    {#                                                               <i class="fas fa-download"></i>#}
+                                                    {#                                                           </a>#}
+                                                    {#                                                        </span>#}
+                                                    {#                                                    </div>#}
+                                                    {#                                                    <button class="btn btn-primary mt-4" type="button" id="changeAttachment">تغییر فایل</button>#}
                                                 </div>
                                             </div>
                                         </div>
